[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.17.0",
    "aiohttp>=3.11.12",
    "aioredis>=2.0.1",
    "beautifulsoup4>=4.13.3",
    "instaloader>=4.14.1",
    "pytube>=15.0.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
    "yt-dlp>=2025.1.26",
]
